--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <li>menu-3</li>
 </ul>
 </div>
+<div class="inicio">
+<p>Este es un modelo de una pagina,seria un wireframe para que sea modificado luego.</p>
 <table>
 <tr>
 <td>
@@ -33,6 +35,7 @@ columna 2
 <td>fila 2 </td>
 </tr>
 </table>
+<aside>redes sociales</aside>
 <div class="pie">
 <footer>creado y administrado por ema4x.</footer>
 </div>
