--- a/index.html
+++ b/index.html
@@ -21,19 +21,7 @@
 </div>
 <div class="inicio">
 <p>Este es un modelo de una pagina,seria un wireframe para que sea modificado luego.</p>
-<table>
-<tr>
-<td>
-columna 1
-</td>
-<td>
-columna 2
-</td>
-</tr>
-<tr>
-<td>fila 1</td>
-<td>fila 2 </td>
-</tr>
+<p>hice una nueva modificacion</p>
 </table>
 <aside>redes sociales</aside>
 <div class="pie">
